Application text edits.

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -80,7 +80,7 @@
 </div>
 <div class="ui blue segment">
 	<i class="circular question hoverable icon" style="float: right;" data-label="water"></i>
-	<h3 class="ui floated left header">Water Quality Health Violations</h3>
+	<h3 class="ui floated left header">Water Quality Violations</h3>
 	<div class="ui divider" style="clear: both;"></div>
 	<h4 class="ui center aligned icon header" ng-if="!waterLoading && violations.length == 0">
 		<i class="circular check icon"></i>
