Darken recent water violation indicator row color
Closes #61.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,7 +61,7 @@ body > .content, .ui.top-header > .grid {
 }
 
 .warning-background {
-	background-color: #FFFAF3;
+	background-color: #FFE3BD;
 }
 
 /* Landing Page */
