Show "No Recent Violations" if no violations are found

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -82,10 +82,6 @@
 	<i class="circular question hoverable icon" style="float: right;" data-label="water"></i>
 	<h3 class="ui floated left header">Water Quality Violations</h3>
 	<div class="ui divider" style="clear: both;"></div>
-	<h4 class="ui center aligned icon header" ng-if="!waterLoading && violations.length == 0">
-		<i class="circular check icon"></i>
-		No Violations Found
-	</h4>
 	<div class="ui icon warning message" ng-if="!waterLoading && getRecentViolations().length != 0 && violations.length != 0">
 		<i class="warning sign icon"></i>
 		<div class="content">
@@ -93,13 +89,17 @@
 			<p>There have been {{getRecentViolations().length}} violations in this area over the past year.</p>
 		</div>
 	</div>
-	<div class="ui icon positive message" ng-if="!waterLoading && getRecentViolations().length == 0 && violations.length != 0">
+	<div class="ui icon positive message" ng-if="!waterLoading && getRecentViolations().length == 0">
 		<i class="check sign icon"></i>
 		<div class="content">
 			<div class="header">No Recent Violations</div>
 			<p>There have been no violations in this area over the past year.</p>
 		</div>
 	</div>
+	<h4 class="ui center aligned icon header" ng-if="!waterLoading && violations.length == 0">
+		<i class="circular check icon"></i>
+		No Violations Found
+	</h4>
 	<div class="ui icon message" ng-if="waterLoading && violations.length != 0">
 		<i class="circle notched loading icon"></i>
 		<div class="content">
