Add keyboard accessibility to search buttons

--- a/public/app/partials/landing.html
+++ b/public/app/partials/landing.html
@@ -4,6 +4,6 @@
 	</h2>
 	<div id="query" class="ui large action input">
 		<input id="search" type="text" placeholder="Enter address, city, state, and/or zipcode" ng-model="query" enter-key="search()">
-		<button class="ui primary button" ng-click="search()">Search</button>
+		<button class="ui primary button" tabindex="0" ng-click="search()">Search</button>
 	</div>
 </div>
