--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -3,7 +3,7 @@
 		Location
 	</div>
 	<input type="text" placeholder="Enter address, city, state, and/or zipcode" ng-model="query" enter-key="requery()">
-	<button class="ui primary button" style="font-size: 1em;" ng-click="requery()">Search</button>
+	<button class="ui primary button" tabindex="0" style="font-size: 1em;" ng-click="requery()">Search</button>
 </div>
 <div class="ui divider" style="clear: both; border: 0;"></div>
 <div class="ui icon negative message" ng-if="locationError">
