--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -17,7 +17,7 @@
 <div class="ui stackable grid" style="clear: both;">
 	<div class="ten wide column">
 		<div class="ui blue segment">
-			<i class="circular question hoverable icon" style="float: right;" data-label="air"></i>
+			<i id="air-help" class="circular question hoverable icon" tabindex="0" style="float: right;" data-label="air" enter-key="togglePopup('#air-help')"></i>
 			<h3 class="ui floated left header">Daily Air Quality Forecast</h3>
 			<div class="ui divider" style="clear: both;"></div>
 			<div class="description" ng-if="!airLoading && airData.location">
@@ -33,10 +33,10 @@
 						<tr ng-repeat="(contaminant, forecast) in airData.forecasts">
 							<td>
 								{{contaminant}}
-								<i class="circular question icon" data-html="{{airContaminantDescriptions[contaminant]}}"></i>
+								<i id="forecast-{{$index}}" class="circular question icon" tabindex="0" data-html="{{airContaminantDescriptions[contaminant]}}" enter-key="togglePopup('#forecast-' + $index)"></i>
 							</td>
 							<td class="center aligned" ng-repeat="date in airData.forecastDates">
-								<a class="ui empty circular label" ng-style="{'background-color': airQualityCodes[forecast[date]].color}" data-title="{{forecast[date] || 'Not available'}}" data-content="{{airQualityCodes[forecast[date]].desc}}"></a>
+								<a id="forecast-{{$parent.$index}}-{{$index}}" class="ui empty circular label" tabindex="0" ng-style="{'background-color': airQualityCodes[forecast[date]].color}" data-title="{{forecast[date] || 'Not available'}}" data-content="{{airQualityCodes[forecast[date]].desc}}" enter-key="togglePopup('#forecast-' + $parent.$index + '-' + $index)"></a>
 							</td>
 						</tr>
 					</tbody>
@@ -55,7 +55,7 @@
 	</div>
 	<div class="six wide column">
 		<div class="ui blue segment">
-			<i class="circular question hoverable icon" style="float: right;" data-label="uv"></i>
+			<i id="uv-help" class="circular question hoverable icon" tabindex="0" style="float: right;" data-label="uv" enter-key="togglePopup('#uv-help')"></i>
 			<h3 class="ui floated left header">Today's UV Index</h3>
 			<div class="ui divider" style="clear: both;"></div>
 			<div class="ui uv icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
@@ -75,7 +75,7 @@
 	</div>
 </div>
 <div class="ui blue segment">
-	<i class="circular question hoverable icon" style="float: right;" data-label="water"></i>
+	<i id="water-help" class="circular question hoverable icon" tabindex="0" style="float: right;" data-label="water" enter-key="togglePopup('#water-help')"></i>
 	<h3 class="ui floated left header">Water Quality Violations</h3>
 	<div class="ui divider" style="clear: both;"></div>
 	<div class="ui icon warning message" ng-if="!waterLoading && getRecentViolations().length != 0 && violations.length != 0">
@@ -114,7 +114,7 @@
 					<thead>
 						<tr>
 							<th class="hoverable" ng-repeat="header in tableHeaders" ng-click="changeSort(header.field)">
-								<i class="circular question icon" data-html="{{header.desc}}" ng-if="header.desc"></i>
+								<i id="header-{{$parent.$index}}-{{$index}}" class="circular question icon" tabindex="0" data-html="{{header.desc}}" ng-if="header.desc" enter-key="togglePopup('#header-' + $parent.$index + '-' + $index)"></i>
 								<span tabindex="0" enter-key="changeSort(header.field)">
 									{{header.label}}
 									<i ng-if="sortField == header.field" class="ui sort {{ reverse ? 'ascending' : 'descending' }} icon"></i>
