Fix recent violation row highlighting
The row background color was being overwritten by the table stripping.
Closes #67.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,7 +61,7 @@ body > .content, .ui.top-header > .grid {
 }
 
 .warning-background {
-	background-color: #FFE3BD;
+	background-color: #FFE3BD!important;
 }
 
 /* Landing Page */
